// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node constructor  without children 1`] = `
Node {
  "children": Array [],
  "end": 2,
  "errors": Array [],
  "findChildByPosition": [Function],
  "findChildByType": [Function],
  "findParentByType": [Function],
  "fragment": true,
  "fullText": "Foo",
  "lookup": true,
  "parent": Node {
    "children": Array [],
    "end": undefined,
    "errors": Array [],
    "findChildByPosition": [Function],
    "findChildByType": [Function],
    "findParentByType": [Function],
    "fragment": undefined,
    "fullText": undefined,
    "lookup": undefined,
    "parent": undefined,
    "rest": undefined,
    "start": undefined,
    "text": undefined,
    "type": undefined,
  },
  "rest": "",
  "start": 0,
  "text": "Foo",
  "type": "term",
}
`;

exports[`Node constructor complete 1`] = `
Node {
  "children": Array [
    Node {
      "children": Array [],
      "end": undefined,
      "errors": Array [],
      "findChildByPosition": [Function],
      "findChildByType": [Function],
      "findParentByType": [Function],
      "fragment": undefined,
      "fullText": undefined,
      "lookup": undefined,
      "parent": undefined,
      "rest": undefined,
      "start": undefined,
      "text": undefined,
      "type": undefined,
    },
    Node {
      "children": Array [],
      "end": undefined,
      "errors": Array [],
      "findChildByPosition": [Function],
      "findChildByType": [Function],
      "findParentByType": [Function],
      "fragment": undefined,
      "fullText": undefined,
      "lookup": undefined,
      "parent": undefined,
      "rest": undefined,
      "start": undefined,
      "text": undefined,
      "type": undefined,
    },
  ],
  "end": 2,
  "errors": Array [],
  "findChildByPosition": [Function],
  "findChildByType": [Function],
  "findParentByType": [Function],
  "fragment": true,
  "fullText": "Foo",
  "lookup": true,
  "parent": Node {
    "children": Array [],
    "end": undefined,
    "errors": Array [],
    "findChildByPosition": [Function],
    "findChildByType": [Function],
    "findParentByType": [Function],
    "fragment": undefined,
    "fullText": undefined,
    "lookup": undefined,
    "parent": undefined,
    "rest": undefined,
    "start": undefined,
    "text": undefined,
    "type": undefined,
  },
  "rest": "",
  "start": 0,
  "text": "Foo",
  "type": "term",
}
`;
